added structure and the first few descriptions

--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Improvsitory - main</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  
+  <h1 class="text-center">Improv Games</h1>
+  <h3>Categories</h3>
+  <h5><a href="pages/all_games.html">All Games</a></h5>
+  <h5><a href="pages/audience_participation_games.html">Audience Participation</a></h5>
+  <h5><a href="pages/character_games.html">Character Games & Exercises</a></h5>
+  <h5><a href="pages/excercises.html">Exercises & Warm Ups</a></h5>
+  <h5><a href="pages/guessing_games.html">Guessing Games</a></h5>
+  <h5><a href="pages/interview_games.html">Interview Games</a></h5>
+  <h5><a href="pages/long_forms.html">Long Forms</a></h5>
+  <h5><a href="pages/musical_games.html">Musical Games</a></h5>
+  <h5><a href="pages/non_performance_games.html">Non-Performance Games</a></h5>
+  <h5><a href="pages/performance_games.html">Performance Games</a></h5>
+  <h5><a href="pages/pun_games.html">Pun Games</a></h5>
+  <h5><a href="pages/scene_games.html">Scene Based Games</a></h5>
+  <h5><a href="pages/song_formats.html">Song Formats</a></h5>
 </body>
 </html>
