--- a/index.html
+++ b/index.html
@@ -7,21 +7,31 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/style.css">
 </head>
+<header>
+  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+</header>
 <body>
   <h1 class="text-center">Improv Games</h1>
-  <h3>Categories</h3>
-  <h5><a href="pages/all_games.html">All Games</a></h5>
-  <h5><a href="pages/audience_participation_games.html">Audience Participation</a></h5>
-  <h5><a href="pages/character_games.html">Character Games & Exercises</a></h5>
-  <h5><a href="pages/excercises.html">Exercises & Warm Ups</a></h5>
-  <h5><a href="pages/guessing_games.html">Guessing Games</a></h5>
-  <h5><a href="pages/interview_games.html">Interview Games</a></h5>
-  <h5><a href="pages/long_forms.html">Long Forms</a></h5>
-  <h5><a href="pages/musical_games.html">Musical Games</a></h5>
-  <h5><a href="pages/non_performance_games.html">Non-Performance Games</a></h5>
-  <h5><a href="pages/performance_games.html">Performance Games</a></h5>
-  <h5><a href="pages/pun_games.html">Pun Games</a></h5>
-  <h5><a href="pages/scene_games.html">Scene Based Games</a></h5>
-  <h5><a href="pages/song_formats.html">Song Formats</a></h5>
+  <div class="m-5">
+    <h3>Categories</h3>
+    <h5><a href="pages/all_games.html">All Games</a></h5>
+    <h5><a href="pages/audience_participation_games.html">Audience Participation</a></h5>
+    <h5><a href="pages/character_games.html">Character Games & Exercises</a></h5>
+    <h5><a href="pages/excercises.html">Exercises & Warm Ups</a></h5>
+    <h5><a href="pages/guessing_games.html">Guessing Games</a></h5>
+    <h5><a href="pages/interview_games.html">Interview Games</a></h5>
+    <h5><a href="pages/long_forms.html">Long Forms</a></h5>
+    <h5><a href="pages/musical_games.html">Musical Games</a></h5>
+    <h5><a href="pages/non_performance_games.html">Non-Performance Games</a></h5>
+    <h5><a href="pages/object_work.html">Object Work</a></h5>
+    <h5><a href="pages/performance_games.html">Performance Games</a></h5>
+    <h5><a href="pages/pun_games.html">Pun Games</a></h5>
+    <h5><a href="pages/scene_games.html">Scene Based Games</a></h5>
+    <h5><a href="pages/sentence_games.html">Sentence Games</a></h5>
+    <h5><a href="pages/song_formats.html">Song Formats</a></h5>
+  </div>
 </body>
+<footer>
+  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+</footer>
 </html>
