--- a/pages/audience_participation_games.html
+++ b/pages/audience_participation_games.html
@@ -7,76 +7,98 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/style.css">
 </head>
+<header>
+  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+</header>
 <body>
-  <h1 class="text-center m-5">Audience Participation</h1>
+  <h1 class="text-center mb-5" id="top">Audience Participation</h1>
   <div class="m-5">
     <h5><a href="#dayInTheLife">Day in the Life</a></h5>
+    <h5><a href="#honkDing">Honk Ding</a></h5>
     <h5><a href="#mannequins">Mannequins</a></h5>
     <h5><a href="#peopleAsProps">People as Props</a></h5>
     <h5><a href="#pillars">Pillars</a></h5>
     <h5><a href="#pingPongBallad">Ping Pong Ballad</a></h5>
     <h5><a href="#soundEffects">Sound Effects</a></h5>
-    <h5><a href="../index.html">Home</a></h5>
   </div>
 
   <hr class="thick-hr">
+
+  <div class="m-5">
+    <div id="dayInTheLife">
+      <h3>Day in the Life</h3>
+      <hr>
+      <p>description</p>
+      <h6>tags</h6>
+      <a href="audience_participation_games.html">Audience Participation</a> - <a href="interview_games.html">Interview</a> - <a href="performance_games.html">Performance</a> <a href="scene_games.html">Scene Based</a>
+    </div>
   
-  <div id="dayInTheLife" class="m-5">
-    <h3>Day in the Life</h3>
-    <hr>
-    <p>description</p>
-    <h6>tags</h6>
-    <a href="audience_participation_games.html">Audience Participation</a> - <a href="interview_games.html">Interview</a> - <a href="performance_games.html">Performance</a> <a href="scene_games.html">Scene Based</a>
-  </div>
+    <hr class="thick-hr">
+  
+    <div id="honkDing">
+      <h3>Honk Ding</h3>
+      <hr>
+      <p>description</p>
+      <h6>tags</h6>
+      <a href="audience_participation_games.html">Audience Participation</a> - <a href="interview_games.html">Interview</a> - <a href="performance_games.html">Performance</a> - <a href="scene_games.html">Scene Based</a>
+    </div>
+  
+    <hr class="thick-hr">
+  
+    <div id="mannequins">
+      <h3>Mannequins</h3>
+      <hr>
+      <p>description</p>
+      <h6>tags</h6>
+      <a href="audience_participation_games.html">Audience Participation</a> - <a href="performance_games.html">Performance</a> - <a href="scene_games.html">Scene Based</a>
+    </div>
+  
+    <hr class="thick-hr">
+  
+    <div id="peopleAsProps">
+      <h3>People as Props</h3>
+      <hr>
+      <p>description</p>
+      <h6>tags</h6>
+      <a href="audience_participation_games.html">Audience Participation</a> - <a href="performance_games.html">Performance</a> - <a href="scene_games.html">Scene Based</a>
+    </div>
+  
+    <hr class="thick-hr">
+  
+    <div id="pillars">
+      <h3>Pillars</h3>
+      <hr>
+      <p>Two volunteers are taken from the audience, sat in chairs or stools next to each other near front center stage, and assigned to one of two improvisors. The two improvisors begin a scene and periodically tap their volunteer on the shoulder. When the volunteer is tapped, they are to say a random word off the tope of their head. The improvisor then has justify that word as if it was a part of their dialogue.</p>
+      <h6>tags</h6>
+      <a href="audience_participation_games.html">Audience Participation</a> - <a href="performance_games.html">Performance</a> - <a href="scene_games.html">Scene Based</a>
+    </div>
+  
+    <hr class="thick-hr">
+  
+    <div id="pingPongBallad">
+      <h3>Ping Pong Ballad</h3>
+      <hr>
+      <p>description</p>
+      <h6>tags</h6>
+      <a href="audience_participation_games.html">Audience Participation</a> - <a href="musical_games.html">Musical</a> - <a href="performance_games.html">Performance</a>
+    </div>
+  
+    <hr class="thick-hr">
+  
+    <div id="soundEffects">
+      <h3>Sound Effects</h3>
+      <hr>
+      <p>description</p>
+      <h6>tags</h6>
+      <a href="audience_participation_games.html">Audience Participation</a> - <a href="performance_games.html">Performance</a> - <a href="scene_games.html">Scene Based</a>
+    </div>
 
-  <hr class="thick-hr">
+    <hr class="thick-hr">
 
-  <div id="mannequins" class="m-5">
-    <h3>Mannequins</h3>
-    <hr>
-    <p>description</p>
-    <h6>tags</h6>
-    <a href="audience_participation_games.html">Audience Participation</a> - <a href="performance_games.html">Performance</a> - <a href="scene_games.html">Scene Based</a>
-  </div>
-
-  <hr class="thick-hr">
-
-  <div id="peopleAsProps" class="m-5">
-    <h3>People as Props</h3>
-    <hr>
-    <p>description</p>
-    <h6>tags</h6>
-    <a href="audience_participation_games.html">Audience Participation</a> - <a href="performance_games.html">Performance</a> - <a href="scene_games.html">Scene Based</a>
-  </div>
-
-  <hr class="thick-hr">
-
-  <div id="pillars" class="m-5">
-    <h3>Pillars</h3>
-    <hr>
-    <p>Two volunteers are taken from the audience, sat in chairs or stools next to each other near front center stage, and assigned to one of two improvisors. The two improvisors begin a scene and periodically tap their volunteer on the shoulder. When the volunteer is tapped, they are to say a random word off the tope of their head. The improvisor then has justify that word as if it was a part of their dialogue.</p>
-    <h6>tags</h6>
-    <a href="audience_participation_games.html">Audience Participation</a> - <a href="performance_games.html">Performance</a> - <a href="scene_games.html">Scene Based</a>
-  </div>
-
-  <hr class="thick-hr">
-
-  <div id="pingPongBallad" class="m-5">
-    <h3>Ping Pong Ballad</h3>
-    <hr>
-    <p>description</p>
-    <h6>tags</h6>
-    <a href="audience_participation_games.html">Audience Participation</a> - <a href="musical_games.html">Musical</a> - <a href="performance_games.html">Performance</a>
-  </div>
-
-  <hr class="thick-hr">
-
-  <div id="soundEffects" class="m-5">
-    <h3>Sound Effects</h3>
-    <hr>
-    <p>description</p>
-    <h6>tags</h6>
-    <a href="audience_participation_games.html">Audience Participation</a> - <a href="performance_games.html">Performance</a> - <a href="scene_games.html">Scene Based</a>
+    <h5><a href="#top">Back to Top</a></h5>
   </div>
 </body>
+<footer>
+  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+</footer>
 </html>
