--- a/pages/guessing_games.html
+++ b/pages/guessing_games.html
@@ -7,13 +7,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/style.css">
 </head>
+<header>
+  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+</header>
 <body>
   <h1 class="text-center">Guessing Games</h1>
   <div>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
+    <h5><a href="#chainMurder">Chain Murder</a></h5>
+    <h5><a href="#datingGame">Dating Game</a></h5>
+    <h5><a href="#fortuneTeller">Fortune Teller</a></h5>
+    <h5><a href="#greenScreen">Green Screen</a></h5>
+    <h5><a href="#marriageCounseling">Marriage Counseling</a></h5>
+    <h5><a href="#partyQuirks">Party Quirks</a></h5>
+    <h5><a href="#repairShop">Repair Shop</a></h5>
+    <h5><a href="#returnDesk">Return Desk</a></h5>
+    <h5><a href="#somethingOldSomethingNew">Something Old, Something New</a></h5>
+    <h5><a href="#taxi">Taxi</a></h5>
+    <h5><a href="#whyAreYouLate">Why Are you Late?</a></h5>
     <h5><a href="../index.html">Home</a></h5>
   </div>
 </body>
