--- a/pages/long_forms.html
+++ b/pages/long_forms.html
@@ -7,10 +7,26 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/style.css">
 </head>
+<header>
+  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+</header>
 <body>
   <h1 class="text-center">Long Forms</h1>
   <div>
-    <h5><a href=""></a></h5>
+    <h5><a href="#54321">5-4-3-2-1</a></h5>
+    <h5><a href="#balladeer">Balladeer</a></h5>
+    <h5><a href="#bat">Bat</a></h5>
+    <h5><a href="#chooseYourOwnAdventure">Choose Your Own Adventure</a></h5>
+    <h5><a href="#frenchBraid">FrenchBraid</a></h5>
+    <h5><a href="#harold">Harold</a></h5>
+    <h5><a href="#hotelLobby"></a></h5>
+    <h5><a href="#laRonde">La Ronde</a></h5>
+    <h5><a href="#livingRoom">Living Room</a></h5>
+    <h5><a href="#musical">Musical</a></h5>
+    <h5><a href="#narrative">Narrative</a></h5>
+    <h5><a href="organic">Organic</a></h5>
+    <h5><a href="#roadTrip">Road Trip</a></h5>
+    <h5><a href="#tabletopRPG">Tabletop RPG</a></h5>
     <h5><a href="../index.html">Home</a></h5>
   </div>
 </body>
