--- a/pages/pun_games.html
+++ b/pages/pun_games.html
@@ -7,13 +7,21 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/style.css">
 </head>
+<header>
+  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+</header>
 <body>
   <h1 class="text-center">Pun Games</h1>
   <div>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
+    <h5><a href="#185">185</a></h5>
+    <h5><a href="#drinkingWithMe">Drinking With Me</a></h5>
+    <h5><a href="#iLikeMyMen">I Like my Men/Lovers...</a></h5>
+    <h5><a href="#heyWaiter">Hey Waiter!</a></h5>
+    <h5><a href="#southernLawyer">Southern Lawyer</a></h5>
+    <h5><a href="#ourLoveIsLike">Our Love is Like...</a></h5>
+    <h5><a href="#personIsLike">Person is Like...</a></h5>
+    <h5><a href="#sexWithMe">Sex With Me</a></h5>
+    <h5><a href="#sherlock">Sherlock</a></h5>
     <h5><a href="../index.html">Home</a></h5>
   </div>
 </body>
