--- a/pages/scene_games.html
+++ b/pages/scene_games.html
@@ -7,13 +7,42 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/style.css">
 </head>
+<header>
+  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+</header>
 <body>
   <h1 class="text-center">Scene Based Games</h1>
   <div>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
+    <h5><a href="#adGame">Ad Game</a></h5>
+    <h5><a href="#blindDate">Blind Date</a></h5>
+    <h5><a href="#change">Change AKA New Decision</a></h5>
+    <h5><a href="#characterPanel">Character Panel</a></h5>
+    <h5><a href="#dayInTheLife">Day in the Life</a></h5>
+    <h5><a href="#entrancesAndExits">Entrances and Exits</a></h5>
+    <h5><a href="#errands">Errands</a></h5>
+    <h5><a href="#expertPanel">Expert Panel</a></h5>
+    <h5><a href="#forwardReverse">Forward Reverse</a></h5>
+    <h5><a href="#freezeTag">Freeze Tag</a></h5>
+    <h5><a href="#genreRollercoaster">Genre Rollercoaster</a></h5>
+    <h5><a href="#halfLife">Half Life</a></h5>
+    <h5><a href="#highlander">Highlander</a></h5>
+    <h5><a href="#hitchHiker">Hitch Hiker</a></h5>
+    <h5><a href="#hollywoodDirector">Hollywood Director</a></h5>
+    <h5><a href="#honkDing">Honk Ding</a></h5>
+    <h5><a href="#hotelLobby">Hotel Lobby</a></h5>
+    <h5><a href="#hyperFlashback">Hyper Flashback</a></h5>
+    <h5><a href="#parallelUniverses">Parallel Universes</a></h5>
+    <h5><a href="#soundEffects">Sound Effects</a></h5>
+    <h5><a href="#sentenceGames">Sentence Game</a></h5>
+    <h5><a href="#sitStandBend">Sit Stand Bend</a></h5>
+    <h5><a href="#superheroInterview">Superhero Interview</a></h5>
+    <h5><a href="#textersNightmare">Texter's Nightmare</a></h5>
+    <h5><a href="#threeHeadedExpert">Three Header Expert</a></h5>
+    <h5><a href="#tripleDub">Triple Dub</a></h5>
+    <h5><a href="#typewriter">Typewriter</a></h5>
+    <h5><a href="#voiceOverRevenge">Voice Over/Voice Over Revenge</a></h5>
+    <h5><a href="#whyAreYouLate">Why Are You Late?</a></h5>
+    <h5><a href="#worldCrisis">World Crisis</a></h5>
     <h5><a href="../index.html">Home</a></h5>
   </div>
 </body>
