working on data

--- a/pages/excercises.html
+++ b/pages/excercises.html
@@ -11,7 +11,7 @@
   <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
 </header>
 <body>
-  <h1 class="text-center">Exercises & Warm Ups</h1>
+  <h1 class="text-center">Exercises</h1>
   <div>
     <h5><a href="">1-10 Emotions</a></h5>
     <h5><a href="">Alphabet Game</a></h5>
