--- a/index.html
+++ b/index.html
@@ -11,24 +11,30 @@
   <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
 </header>
 <body>
-  <h1 class="text-center">Improv Games</h1>
+  <h1 class="text-center">Improvsitory</h1>
   <div class="m-5">
     <h3>Categories</h3>
     <h5><a href="pages/all_games.html">All Games</a></h5>
-    <h5><a href="pages/audience_participation_games.html">Audience Participation</a></h5>
-    <h5><a href="pages/character_games.html">Character Games & Exercises</a></h5>
-    <h5><a href="pages/excercises.html">Exercises & Warm Ups</a></h5>
-    <h5><a href="pages/guessing_games.html">Guessing Games</a></h5>
-    <h5><a href="pages/interview_games.html">Interview Games</a></h5>
+    <h5><a href="pages/audience_participation.html">Audience Participation</a></h5>
+    <h5><a href="pages/character.html">Character Games & Exercises</a></h5>
+    <h5><a href="pages/excercises.html">Exercises</a></h5>
+    <h5><a href="pages/gibberish.html">Gibberish</a></h5>
+    <h5><a href="pages/group.html">Group</a></h5>
+    <h5><a href="pages/guessing.html">Guessing Games</a></h5>
+    <h5><a href="pages/interview.html">Interview Games</a></h5>
+    <h5><a href="pages/listening.html">Listening</a></h5>
     <h5><a href="pages/long_forms.html">Long Forms</a></h5>
-    <h5><a href="pages/musical_games.html">Musical Games</a></h5>
-    <h5><a href="pages/non_performance_games.html">Non-Performance Games</a></h5>
+    <h5><a href="pages/musical.html">Musical Games</a></h5>
     <h5><a href="pages/object_work.html">Object Work</a></h5>
-    <h5><a href="pages/performance_games.html">Performance Games</a></h5>
-    <h5><a href="pages/pun_games.html">Pun Games</a></h5>
-    <h5><a href="pages/scene_games.html">Scene Based Games</a></h5>
-    <h5><a href="pages/sentence_games.html">Sentence Games</a></h5>
+    <h5><a href="pages/party.html">Party</a></h5>
+    <h5><a href="pages/performance.html">Performance Games</a></h5>
+    <h5><a href="pages/pun.html">Pun Games</a></h5>
+    <h5><a href="pages/scene.html">Scene Based Games</a></h5>
+    <h5><a href="pages/sentence.html">Sentence Games</a></h5>
     <h5><a href="pages/song_formats.html">Song Formats</a></h5>
+    <h5><a href="pages/torture.html">Torture Games</a></h5>
+    <h5><a href="pages/warm_ups.html">Warm Ups</a></h5>
+    <h5><a href=""></a></h5>
   </div>
 </body>
 <footer>
