--- a/pages/party.html
+++ b/pages/party.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Non Performance Games</title>
+  <title>Group & Party Games</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/style.css">
 </head>
@@ -11,7 +11,7 @@
   <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
 </header>
 <body>
-  <h1 class="text-center">Non-Performance Games</h1>
+  <h1 class="text-center">Group & Party Games</h1>
   <div>
     <h5><a href="">Alien Tiger Cow</a></h5>
     <h5><a href="">Bad Boys</a></h5>
@@ -20,6 +20,7 @@
     <h5><a href="">Clovers</a></h5>
     <h5><a href="">Golden Goose</a></h5>
     <h5><a href="">Headlines</a></h5>
+    <h5><a href="">I am a tree</a></h5>
     <h5><a href="">Jeepers Creepers</a></h5>
     <h5><a href="">Moon Lust</a></h5>
     <h5><a href="">Pointies</a></h5>
