--- a/pages/torture.html
+++ b/pages/torture.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PAGE TITLE</title>
+  <title>Torture Games</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/style.css">
 </head>
@@ -11,7 +11,7 @@
   <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
 </header>
 <body>
-  <h1 class="text-center my-3">PAGE TITLE</h1>
+  <h1 class="text-center my-3">Torture Games</h1>
   <div class="m-5 games-list">
     <ul class="py-3">
       <li>
