--- a/pages/warm_ups.html
+++ b/pages/warm_ups.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PAGE TITLE</title>
+  <title>Warm Ups</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/style.css">
 </head>
@@ -11,7 +11,7 @@
   <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
 </header>
 <body>
-  <h1 class="text-center my-3">PAGE TITLE</h1>
+  <h1 class="text-center my-3">Warm Ups</h1>
   <div class="m-5 games-list">
     <ul class="py-3">
       <li>
@@ -29,7 +29,7 @@
       <hr>
       <p>description</p>
       <h6>tags</h6>
-      <a href="performance_games.html">Performace</a>
+      <a href="audience_participation_games.html">Audience Participation</a> - <a href="character_games.html">Character</a> - <a href="excercises.html">Exercise</a> - <a href="guessing_games.html">Guessing</a> - <a href="interview_games.html">Interview</a> - <a href="long_forms.html">Long Form</a> - <a href="musical_games.html">Musical</a> - <a href="non_performance_games.html">Non-Performance</a> - <a href="object_work.html">Object Work</a> - <a href="performance_games.html">Performance</a> - <a href="pun_games.html">Pun</a> - <a href="scene_games.html">Scenework</a> - <a href="sentence_games.html">Sentence Game</a> - <a href="song_formats.html">Song Format</a> - <a href="excercises.html">Warm Up</a>
       <hr>
       <h6><a href="#top">Back to Top</a></h6>
     </div>
