--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
   <div class="m-5">
     <h3>Categories</h3>
     <h5><a href="pages/all_games.html">All Games</a></h5>
-    <h5><a href="pages/audience_participation.html">Audience Participation</a></h5>
+    <h5><a href="pages/audience_participation.html">Audience Participation Games</a></h5>
     <h5><a href="pages/character.html">Character Games & Exercises</a></h5>
     <h5><a href="pages/excercises.html">Exercises</a></h5>
-    <h5><a href="pages/gibberish.html">Gibberish</a></h5>
-    <h5><a href="pages/group.html">Group</a></h5>
+    <h5><a href="pages/gibberish.html">Gibberish Games</a></h5>
+    <h5><a href="pages/group.html">Group Games</a></h5>
     <h5><a href="pages/guessing.html">Guessing Games</a></h5>
     <h5><a href="pages/interview.html">Interview Games</a></h5>
-    <h5><a href="pages/listening.html">Listening</a></h5>
+    <h5><a href="pages/listening.html">Listening Games & Exercises</a></h5>
     <h5><a href="pages/long_forms.html">Long Forms</a></h5>
-    <h5><a href="pages/musical.html">Musical Games</a></h5>
-    <h5><a href="pages/object_work.html">Object Work</a></h5>
-    <h5><a href="pages/party.html">Party</a></h5>
+    <h5><a href="pages/musical.html">Musical Games & Exercises</a></h5>
+    <h5><a href="pages/object_work.html">Object Work Games & Exercises</a></h5>
+    <h5><a href="pages/party.html">Party Games</a></h5>
     <h5><a href="pages/performance.html">Performance Games</a></h5>
     <h5><a href="pages/pun.html">Pun Games</a></h5>
     <h5><a href="pages/scene.html">Scene Based Games</a></h5>
