--- a/pages/audience_participation.html
+++ b/pages/audience_participation.html
@@ -47,7 +47,7 @@
       <hr>
       <p>description</p>
       <h6>tags</h6>
-      <a href="audience_participation_games.html">Audience Participation</a> - <a href="interview_games.html">Interview</a> - <a href="performance_games.html">Performance</a> <a href="scene_games.html">Scenework</a>
+      <a href="audience_participation.html">Audience Participation</a> - <a href="interview.html">Interview</a> - <a href="performance.html">Performance</a> <a href="scene.html">Scenework</a>
       <hr>
       <h6><a href="#top">Back to Top</a></h6>
     </div>
@@ -60,7 +60,7 @@
       <hr>
       <p>description</p>
       <h6>tags</h6>
-      <a href="audience_participation_games.html">Audience Participation</a> - <a href="interview_games.html">Interview</a> - <a href="performance_games.html">Performance</a> - <a href="scene_games.html">Scene Based</a>
+      <a href="audience_participation.html">Audience Participation</a> - <a href="interview.html">Interview</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Based</a>
       <hr>
       <h6><a href="#top">Back to Top</a></h6>
     </div>
@@ -73,7 +73,7 @@
       <hr>
       <p>description</p>
       <h6>tags</h6>
-      <a href="audience_participation_games.html">Audience Participation</a> - <a href="performance_games.html">Performance</a> - <a href="scene_games.html">Scene Based</a>
+      <a href="audience_participation.html">Audience Participation</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Based</a>
       <hr>
       <h6><a href="#top">Back to Top</a></h6>
     </div>
@@ -86,7 +86,7 @@
       <hr>
       <p>description</p>
       <h6>tags</h6>
-      <a href="audience_participation_games.html">Audience Participation</a> - <a href="performance_games.html">Performance</a> - <a href="scene_games.html">Scene Based</a>
+      <a href="audience_participation.html">Audience Participation</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Based</a>
       <hr>
       <h6><a href="#top">Back to Top</a></h6>
     </div>
@@ -99,7 +99,7 @@
       <hr>
       <p>Two volunteers are taken from the audience, sat in chairs or stools next to each other near front center stage, and assigned to one of two improvisors. The two improvisors begin a scene and periodically tap their volunteer on the shoulder. When the volunteer is tapped, they are to say a random word off the tope of their head. The improvisor then has justify that word as if it was a part of their dialogue.</p>
       <h6>tags</h6>
-      <a href="audience_participation_games.html">Audience Participation</a> - <a href="performance_games.html">Performance</a> - <a href="scene_games.html">Scene Based</a>
+      <a href="audience_participation.html">Audience Participation</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Based</a>
       <hr>
       <h6><a href="#top">Back to Top</a></h6>
     </div>
@@ -112,7 +112,7 @@
       <hr>
       <p>description</p>
       <h6>tags</h6>
-      <a href="audience_participation_games.html">Audience Participation</a> - <a href="musical_games.html">Musical</a> - <a href="performance_games.html">Performance</a>
+      <a href="audience_participation.html">Audience Participation</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a>
       <hr>
       <h6><a href="#top">Back to Top</a></h6>
     </div>
@@ -125,7 +125,7 @@
       <hr>
       <p>description</p>
       <h6>tags</h6>
-      <a href="audience_participation_games.html">Audience Participation</a> - <a href="performance_games.html">Performance</a> - <a href="scene_games.html">Scene Based</a>
+      <a href="audience_participation.html">Audience Participation</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Based</a>
       <hr>
       <h6><a href="#top">Back to Top</a></h6>
     </div>
