--- a/pages/categories.html
+++ b/pages/categories.html
@@ -15,26 +15,29 @@
   <h5 class="m-5 accent">Improvitorium is a destination for all things comedy improvisation! It contains a wealth resources designed to enhance your improv skills and ignite your comedic prowess. Explore a collection of rules, descriptions, and strategies for a myriad of games, exercises, and forms, curated to inspire and challenge both novice and seasoned performers alike. Delve into our educational improv hub, brimming with manuals, insightful infographics, and sage advice from industry veterans, providing invaluable guidance every step of the way. Whether you're seeking inspiration, instruction, or entertainment, Improvsitory offers a wealth of video examples, recommended reading, and links to similar websites, ensuring you're equipped with the tools you need to thrive in the world of comedy improvisation. Plus, discover how to locate theaters near you, where you can witness live performances and even take part in workshops to hone your craft. Get ready to unleash your creativity and join a vibrant community of improv enthusiasts at Improvsitory! </h5>
   <div class="m-5">
     <h3>Categories</h3>
-    <h5><a href="all_games.html">All Games</a></h5>
-    <h5><a href="audience_participation.html">Audience Participation Games</a></h5>
-    <h5><a href="character.html">Character Games & Exercises</a></h5>
-    <h5><a href="excercises.html">Exercises</a></h5>
-    <h5><a href="gibberish.html">Gibberish Games</a></h5>
-    <h5><a href="group.html">Group Games</a></h5>
-    <h5><a href="guessing.html">Guessing Games</a></h5>
-    <h5><a href="interview.html">Interview Games</a></h5>
-    <h5><a href="listening.html">Listening Games & Exercises</a></h5>
-    <h5><a href="long_forms.html">Long Forms</a></h5>
-    <h5><a href="musical.html">Musical Games & Exercises</a></h5>
-    <h5><a href="object_work.html">Object Work Games & Exercises</a></h5>
-    <h5><a href="party.html">Party Games</a></h5>
-    <h5><a href="performance.html">Performance Games</a></h5>
-    <h5><a href="pun.html">Pun Games</a></h5>
-    <h5><a href="scene.html">Scene Based Games</a></h5>
-    <h5><a href="sentence.html">Sentence Games</a></h5>
-    <h5><a href="song_formats.html">Song Formats</a></h5>
-    <h5><a href="torture.html">Torture Games</a></h5>
-    <h5><a href="warm_ups.html">Warm Ups</a></h5>
+    <div class="four-column-list">
+      <h5><a href="all_games.html">All Games</a></h5>
+      <h5><a href="audience_participation.html">Audience Participation</a></h5>
+      <h5><a href="character.html">Character</a></h5>
+      <h5><a href="excercises.html">Exercises</a></h5>
+      <h5><a href="gibberish.html">Gibberish</a></h5>
+      <h5><a href="group.html">Group Games</a></h5>
+      <h5><a href="guessing.html">Guessing</a></h5>
+      <h5><a href="interview.html">Interview</a></h5>
+      <h5><a href="listening.html">Listening</a></h5>
+      <h5><a href="long_forms.html">Long Forms</a></h5>
+      <h5><a href="musical.html">Musical</a></h5>
+      <h5><a href="narrative.html">Narrative</a></h5>
+      <h5><a href="object_work.html">Object Work</a></h5>
+      <h5><a href="party.html">Party Games</a></h5>
+      <h5><a href="performance.html">Performance</a></h5>
+      <h5><a href="pun.html">Pun</a></h5>
+      <h5><a href="scene.html">Scenework</a></h5>
+      <h5><a href="sentence.html">Sentence</a></h5>
+      <h5><a href="song_formats.html">Song Formats</a></h5>
+      <h5><a href="torture.html">Torture</a></h5>
+      <h5><a href="warm_ups.html">Warm Ups</a></h5>
+    </div>
     <h5><a href=""></a></h5>
   </div>
 </body>
