--- a/pages/narrative.html
+++ b/pages/narrative.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PAGETITLE</title>
+  <title>Narrative</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/style.css">
 </head>
@@ -11,11 +11,11 @@
   <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
 </header>
 <body>
-  <h1 class="text-center my-3">PAGETITLE</h1>
+  <h1 class="text-center my-3">Narrative</h1>
   <div class="m-5 games-list">
     <ul class="py-3">
       <li>
-        <h5><a href="#gameTitle">GameTitle</a></h5>
+        <h5><a href="#gameTitle">Game Title</a></h5>
       </li>
     </ul>
   </div>
@@ -25,7 +25,7 @@
   <div class="m-5">
     <!-- ---------- GAME TITLE ---------- -->
     <div class="game-box p-2" id="gameTitle">
-      <h3>GameTitle</h3>
+      <h3>Game Title</h3>
       <hr>
       <p>description</p>
       <h6>tags</h6>
