worked on html builders

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -19,7 +19,8 @@
       <h5><a href="all_games.html">All Games</a></h5>
       <h5><a href="audience_participation.html">Audience Participation</a></h5>
       <h5><a href="character.html">Character</a></h5>
-      <h5><a href="excercises.html">Exercises</a></h5>
+      <h5><a href="child_friendly.html">Child Friendly</a></h5>
+      <h5><a href="exercises.html">Exercises</a></h5>
       <h5><a href="gibberish.html">Gibberish</a></h5>
       <h5><a href="group.html">Group Games</a></h5>
       <h5><a href="guessing.html">Guessing</a></h5>
@@ -40,8 +41,11 @@
     </div>
     <h5><a href=""></a></h5>
   </div>
+  <footer>
+    <div class="d-flex flex-wrap justify-content-around">
+      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
+      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
+    </div>
+  </footer>
 </body>
-<footer>
-  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
-</footer>
 </html>
