--- a/pages/character.html
+++ b/pages/character.html
@@ -98,8 +98,11 @@
       <h6><a href="#top">Back to Top</a></h6>
     </div>
   </div>
+  <footer>
+    <div class="d-flex flex-wrap justify-content-around">
+      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
+      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
+    </div>
+  </footer>
 </body>
-<footer>
-  <H5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
-</footer>
 </html>
