--- a/pages/all_games.html
+++ b/pages/all_games.html
@@ -19,7 +19,7 @@
     <h3 id="a">A</h3>
     <div>
       <ul>
-        <li><h5><a href="">Alphabet Game</a></h5></li>
+        <li><h5><a href="excercises.html#alphabetGame">Alphabet Game</a></h5></li>
       </ul>
     </div>
     <h3 id="b">B</h3>
@@ -74,8 +74,11 @@
     <div></div>
     <h5><a href="#top">Back to Top</a></h5>
   </div>
+  <footer>
+    <div class="d-flex flex-wrap justify-content-around">
+      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
+      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
+    </div>
+  </footer>
 </body>
-<footer>
-  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
-</footer>
 </html>
