--- a/pages/child_friendly.html
+++ b/pages/child_friendly.html
@@ -3,22 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interview Games</title>
+  <title>Child Friendly</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/style.css">
 </head>
-<header>
+<header id="top">
   <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
 </header>
 <body>
-  <h1 class="text-center">Interview Games</h1>
-  <div>
-    <h5><a href="">Honk Ding</a></h5>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
-    <h5><a href="../index.html">Home</a></h5>
+  <h1 class="text-center my-3">Child Friendly</h1>
+  <div class="m-5 games-list">
+    <ul class="py-3">
+      <li>
+        <h5><a href="#gameTitle">GameTitle</a></h5>
+      </li>
+    </ul>
+  </div>
+
+  <hr class="thick-hr">
+
+  <div class="m-5">
+    <!-- ---------- GAME TITLE ---------- -->
+    <div class="game-box p-2" id="gameTitle">
+      <h3>GameTitle</h3>
+      <hr>
+      <p>description</p>
+      <h6>tags</h6>
+      <a href="performance_games.html">Performace</a>
+      <hr>
+      <h6><a href="#top">Back to Top</a></h6>
+    </div>
+  
+    <hr class="thick-hr">
   </div>
   <footer>
     <div class="d-flex flex-wrap justify-content-around">
