--- a/pages/group.html
+++ b/pages/group.html
@@ -36,8 +36,11 @@
   
     <hr class="thick-hr">
   </div>
+  <footer>
+    <div class="d-flex flex-wrap justify-content-around">
+      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
+      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
+    </div>
+  </footer>
 </body>
-<footer>
-  <H5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
-</footer>
 </html>
