--- a/pages/party.html
+++ b/pages/party.html
@@ -30,5 +30,11 @@
     <h5><a href="">Zip Zap Zop</a></h5>
     <h5><a href="../index.html">Home</a></h5>
   </div>
+  <footer>
+    <div class="d-flex flex-wrap justify-content-around">
+      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
+      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
+    </div>
+  </footer>
 </body>
 </html>
