Added builders for multiple files

--- a/newest_file.html
+++ b/newest_file.html
@@ -95,7 +95,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="performance.html">Performance</a> - <a href="pun.html">Pun</a> - 
+		<a href="pages/performance.html">Performance</a> - <a href="pages/pun.html">Pun</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -108,7 +108,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="long_forms.html">Long Form</a> - <a href="performance.html">Performance</a> - 
+		<a href="pages/long_forms.html">Long Form</a> - <a href="pages/performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -121,7 +121,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="scene.html">Scenework</a> - 
+		<a href="pages/exercises.html">Exercise</a> - <a href="pages/scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -134,7 +134,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - 
+		<a href="pages/character.html">Character</a> - <a href="pages/exercises.html">Exercise</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -147,7 +147,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="exercises.html">Exercise</a> - 
+		<a href="pages/exercises.html">Exercise</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -160,7 +160,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
+		<a href="pages/exercises.html">Exercise</a> - <a href="pages/group.html">Group Game</a> - <a href="pages/listening.html">Listening</a> - <a href="pages/performance.html">Performance</a> - <a href="pages/scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -173,7 +173,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="musical.html">Musical</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a href="pages/exercises.html">Exercise</a> - <a href="pages/musical.html">Musical</a> - <a href="pages/warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -186,7 +186,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - 
+		<a href="pages/child_friendly.html">Child Friendly</a> - <a href="pages/exercises.html">Exercise</a> - <a href="pages/party.html">Party</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -199,7 +199,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
+		<a href="pages/exercises.html">Exercise</a> - <a href="pages/listening.html">Listening</a> - <a href="pages/performance.html">Performance</a> - <a href="pages/scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -212,7 +212,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a href="pages/exercises.html">Exercise</a> - <a href="pages/listening.html">Listening</a> - <a href="pages/musical.html">Musical</a> - <a href="pages/party.html">Party</a> - <a href="pages/warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -225,7 +225,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="interview.html">Interview</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - <a href="song_formats.html">Song Format</a> - 
+		<a href="pages/interview.html">Interview</a> - <a href="pages/musical.html">Musical</a> - <a href="pages/performance.html">Performance</a> - <a href="pages/song_formats.html">Song Format</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -238,7 +238,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="long_forms.html">Long Form</a> - <a href="musical.html">Musical</a> - <a href="narrative.html">narrative</a> - <a href="performance.html">performance</a> - 
+		<a href="pages/long_forms.html">Long Form</a> - <a href="pages/musical.html">Musical</a> - <a href="pages/narrative.html">narrative</a> - <a href="pages/performance.html">performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -251,7 +251,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance</a> - 
+		<a href="pages/exercises.html">Exercise</a> - <a href="pages/group.html">Group Game</a> - <a href="pages/musical.html">Musical</a> - <a href="pages/party.html">Party</a> - <a href="pages/performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -264,7 +264,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene</a> - 
+		<a href="pages/group.html">Group Game</a> - <a href="pages/musical.html">Musical</a> - <a href="pages/narrative.html">Narrative</a> - <a href="pages/performance.html">Performance</a> - <a href="pages/scene.html">Scene</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -277,7 +277,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="long_forms.html">Long Form</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene</a> - 
+		<a href="pages/long_forms.html">Long Form</a> - <a href="pages/performance.html">Performance</a> - <a href="pages/scene.html">Scene</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -290,7 +290,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance/Warm Up</a> - 
+		<a href="pages/exercises.html">Exercise</a> - <a href="pages/group.html">Group Game</a> - <a href="pages/listening.html">Listening</a> - <a href="pages/musical.html">Musical</a> - <a href="pages/party.html">Party</a> - <a href="pages/performance.html">Performance/Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -303,7 +303,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a href="pages/exercises.html">Exercise</a> - <a href="pages/listening.html">Listening</a> - <a href="pages/musical.html">Musical</a> - <a href="pages/warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -316,7 +316,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Part</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a href="pages/exercises.html">Exercise</a> - <a href="pages/listening.html">Listening</a> - <a href="pages/party.html">Part</a> - <a href="pages/warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -329,7 +329,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - <a href="song_formats.html">Song Format</a> - 
+		<a href="pages/group.html">Group Game</a> - <a href="pages/musical.html">Musical</a> - <a href="pages/performance.html">Performance</a> - <a href="pages/song_formats.html">Song Format</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -340,9 +340,9 @@
 	<div class="game-box p-2" id="bubsyBerkeley">
 		<h3>Bubsy Berkeley</h3>
 		<hr>
-		<p>Description: description</p>
+		<p>Description: Named after the famous MGM musicals choreographer\Form a symmetrical shape on stage and put on some high impact music\Take a suggestion for a title or piece</p>
 		<h6>tags</h6>
-		<a href="energy.html">Energy</a> - <a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - 
+		<a href="pages/energy.html">Energy</a> - <a href="pages/exercises.html">Exercise</a> - <a href="pages/group.html">Group Game</a> - <a href="pages/musical.html">Musical</a> - <a href="pages/performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -355,7 +355,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a href="pages/child_friendly.html">Child Friendly</a> - <a href="pages/energy.html">Energy</a> - <a href="pages/listening.html">Listening</a> - <a href="pages/party.html">Party</a> - <a href="pages/warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -368,7 +368,7 @@
 		<hr>
 		<p>Description: description</p>
 		<h6>tags</h6>
-		<a href="gibberis.html">Gibberish</a> - <a href="guessing.html">Guessing</a> - <a href="object_work.html">Object Work</a> - <a href="performance.html">Performance</a> - 
+		<a href="pages/gibberis.html">Gibberish</a> - <a href="pages/guessing.html">Guessing</a> - <a href="pages/object_work.html">Object Work</a> - <a href="pages/performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
