--- a/pages/audience_participation.html
+++ b/pages/audience_participation.html
@@ -1,140 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Audience Participation</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Audience Participation</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link rel="stylesheet" href="../styles/style.css">
 </head>
 <header id="top">
-  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
 </header>
 <body>
-  <h1 class="text-center my-3">Audience Participation</h1>
-  <div class="m-5 games-list">
-    <ul class="py-3">
-      <li>
-        <h5><a href="#dayInTheLife">Day in the Life</a></h5>
-      </li>
-      <li>
-        <h5><a href="#honkDing">Honk Ding</a></h5>
-      </li>
-      <li>
-        <h5><a href="#mannequins">Mannequins</a></h5>
-      </li>
-      <li>
-        <h5><a href="#peopleAsProps">People as Props</a></h5>
-      </li>
-      <li>
-        <h5><a href="#pillars">Pillars</a></h5>
-      </li>
-      <li>
-        <h5><a href="#pingPongBallad">Ping Pong Ballad</a></h5>
-      </li>
-      <li>
-        <h5><a href="#soundEffects">Sound Effects</a></h5>
-      </li>
-    </ul>
-  </div>
+	<h1 class="text-center my-3">Audience Participation</h1>
+	<p class="text-center my-3">These games involve bringing memebers of the audience on stage to participate in an active way.</p>
+		<div class="m-5 games-list">
+			<ul class="py-3">
+			</ul>
+		</div>
 
-  <hr class="thick-hr">
+<hr class="thick-hr">
 
-  <div class="m-5">
-    <!-- ---------- DAY IN THE LIFE ---------- -->
-    <div class="game-box p-2" id="dayInTheLife">
-      <h3>Day in the Life</h3>
-      <hr>
-      <p>description</p>
-      <h6>tags</h6>
-      <a href="audience_participation.html">Audience Participation</a> - <a href="interview.html">Interview</a> - <a href="performance.html">Performance</a> <a href="scene.html">Scenework</a>
-      <hr>
-      <h6><a href="#top">Back to Top</a></h6>
-    </div>
-  
-    <hr class="thick-hr">
-  
-    <!-- ---------- HONK DING ---------- -->
-    <div class="game-box p-2" id="honkDing">
-      <h3>Honk Ding</h3>
-      <hr>
-      <p>description</p>
-      <h6>tags</h6>
-      <a href="audience_participation.html">Audience Participation</a> - <a href="interview.html">Interview</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Based</a>
-      <hr>
-      <h6><a href="#top">Back to Top</a></h6>
-    </div>
-  
-    <hr class="thick-hr">
-  
-     <!-- ---------- MANNEQUINS ---------- -->
-    <div class="game-box p-2" id="mannequins">
-      <h3>Mannequins</h3>
-      <hr>
-      <p>description</p>
-      <h6>tags</h6>
-      <a href="audience_participation.html">Audience Participation</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Based</a>
-      <hr>
-      <h6><a href="#top">Back to Top</a></h6>
-    </div>
-  
-    <hr class="thick-hr">
-  
-    <!-- ---------- PEOPLE AS PROPS ---------- -->
-    <div class="game-box p-2" id="peopleAsProps">
-      <h3>People as Props</h3>
-      <hr>
-      <p>description</p>
-      <h6>tags</h6>
-      <a href="audience_participation.html">Audience Participation</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Based</a>
-      <hr>
-      <h6><a href="#top">Back to Top</a></h6>
-    </div>
-  
-    <hr class="thick-hr">
-  
-    <!-- ---------- PILLARS ---------- -->
-    <div class="game-box p-2" id="pillars">
-      <h3>Pillars</h3>
-      <hr>
-      <p>Two volunteers are taken from the audience, sat in chairs or stools next to each other near front center stage, and assigned to one of two improvisors. The two improvisors begin a scene and periodically tap their volunteer on the shoulder. When the volunteer is tapped, they are to say a random word off the tope of their head. The improvisor then has justify that word as if it was a part of their dialogue.</p>
-      <h6>tags</h6>
-      <a href="audience_participation.html">Audience Participation</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Based</a>
-      <hr>
-      <h6><a href="#top">Back to Top</a></h6>
-    </div>
-  
-    <hr class="thick-hr">
-  
-    <!-- ---------- PING PONG BALLAD ---------- -->
-    <div class="game-box p-2" id="pingPongBallad">
-      <h3>Ping Pong Ballad</h3>
-      <hr>
-      <p>description</p>
-      <h6>tags</h6>
-      <a href="audience_participation.html">Audience Participation</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a>
-      <hr>
-      <h6><a href="#top">Back to Top</a></h6>
-    </div>
-  
-    <hr class="thick-hr">
-  
-    <!-- ---------- SOUND EFFECTS ---------- -->
-    <div class="game-box p-2" id="soundEffects">
-      <h3>Sound Effects</h3>
-      <hr>
-      <p>description</p>
-      <h6>tags</h6>
-      <a href="audience_participation.html">Audience Participation</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Based</a>
-      <hr>
-      <h6><a href="#top">Back to Top</a></h6>
-    </div>
-  </div>
-  <footer>
-    <div class="d-flex flex-wrap justify-content-around">
-      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
-      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
-    </div>
-  </footer>
-</body>
+<div class="m-5">
+</div>
+<p class="white">built</p></body>
+<footer>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
+</footer>
 </html>
