--- a/pages/child_friendly.html
+++ b/pages/child_friendly.html
@@ -1,46 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Child Friendly</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Child Friendly</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link rel="stylesheet" href="../styles/style.css">
 </head>
 <header id="top">
-  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
 </header>
 <body>
-  <h1 class="text-center my-3">Child Friendly</h1>
-  <div class="m-5 games-list">
-    <ul class="py-3">
-      <li>
-        <h5><a href="#gameTitle">GameTitle</a></h5>
-      </li>
-    </ul>
-  </div>
+	<h1 class="text-center my-3">Child Friendly</h1>
+		<div class="m-5 games-list">
+			<ul class="py-3">
+				<li>
+					<h5><a href="#alienTigerCow">Alien Tiger Cow</a></h5>
+				</li>
+				<li>
+					<h5><a href="#bunnyBunny">Bunny Bunny</a></h5>
+				</li>
+			</ul>
+		</div>
 
-  <hr class="thick-hr">
+<hr class="thick-hr">
 
-  <div class="m-5">
-    <!-- ---------- GAME TITLE ---------- -->
-    <div class="game-box p-2" id="gameTitle">
-      <h3>GameTitle</h3>
-      <hr>
-      <p>description</p>
-      <h6>tags</h6>
-      <a href="performance_games.html">Performace</a>
-      <hr>
-      <h6><a href="#top">Back to Top</a></h6>
-    </div>
-  
-    <hr class="thick-hr">
-  </div>
-  <footer>
-    <div class="d-flex flex-wrap justify-content-around">
-      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
-      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
-    </div>
-  </footer>
-</body>
+<div class="m-5">
+	<!-- ---------- ALIEN TIGER COW ---------- -->
+	<div class="game-box p-2" id="alienTigerCow">
+		<h3>Alien Tiger Cow</h3>
+		<hr>
+		<p>Description: description</p>
+		<h6>tags</h6>
+		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BUNNY BUNNY ---------- -->
+	<div class="game-box p-2" id="bunnyBunny">
+		<h3>Bunny Bunny</h3>
+		<hr>
+		<p>Description: description</p>
+		<h6>tags</h6>
+		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+</div>
+<p class="white">built</p></body>
+<footer>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
+</footer>
 </html>
