--- a/pages/exercises.html
+++ b/pages/exercises.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>PAGETITLE</title>
+	<title>Exercises</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link rel="stylesheet" href="../styles/style.css">
 </head>
@@ -223,9 +223,7 @@
 		<h3>Bubsy Berkeley</h3>
 		<hr>
 		<p>Description: Named after the famous MGM musicals choreographer</p>
-
 <p>Form a symmetrical shape on stage and put on some high impact music</p>
-
 <p>Take a suggestion for a title or piece</p>
 		<h6>tags</h6>
 		<a href="energy.html">Energy</a> - <a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - 
@@ -236,7 +234,7 @@
 	<hr class="thick-hr">
 
 </div>
-</body>
+<p class="white">built</p></body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
 		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
