--- a/pages/group.html
+++ b/pages/group.html
@@ -1,46 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Group</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Group Games</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link rel="stylesheet" href="../styles/style.css">
 </head>
 <header id="top">
-  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
 </header>
 <body>
-  <h1 class="text-center my-3">Group Games</h1>
-  <div class="m-5 games-list">
-    <ul class="py-3">
-      <li>
-        <h5><a href="#gameTitle">Game Title</a></h5>
-      </li>
-    </ul>
-  </div>
+	<h1 class="text-center my-3">Group Games</h1>
+		<div class="m-5 games-list">
+			<ul class="py-3">
+				<li>
+					<h5><a href="#adGame">Ad Game</a></h5>
+				</li>
+				<li>
+					<h5><a href="#band">Band</a></h5>
+				</li>
+				<li>
+					<h5><a href="#bardsBallad">Bard's Ballad</a></h5>
+				</li>
+				<li>
+					<h5><a href="#beastieBoys">Beastie Boys</a></h5>
+				</li>
+				<li>
+					<h5><a href="#blues">Blues</a></h5>
+				</li>
+				<li>
+					<h5><a href="#bubsyBerkeley">Bubsy Berkeley</a></h5>
+				</li>
+			</ul>
+		</div>
 
-  <hr class="thick-hr">
+<hr class="thick-hr">
 
-  <div class="m-5">
-    <!-- ---------- GAME TITLE ---------- -->
-    <div class="game-box p-2" id="gameTitle">
-      <h3>Game Title</h3>
-      <hr>
-      <p>description</p>
-      <h6>tags</h6>
-      <a href="performance_games.html">Performace</a>
-      <hr>
-      <h6><a href="#top">Back to Top</a></h6>
-    </div>
-  
-    <hr class="thick-hr">
-  </div>
-  <footer>
-    <div class="d-flex flex-wrap justify-content-around">
-      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
-      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
-    </div>
-  </footer>
-</body>
+<div class="m-5">
+	<!-- ---------- AD GAME ---------- -->
+	<div class="game-box p-2" id="adGame">
+		<h3>Ad Game</h3>
+		<hr>
+		<p>Description: description</p>
+		<h6>tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BAND ---------- -->
+	<div class="game-box p-2" id="band">
+		<h3>Band</h3>
+		<hr>
+		<p>Description: description</p>
+		<h6>tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BARD'S BALLAD ---------- -->
+	<div class="game-box p-2" id="bardsBallad">
+		<h3>Bard's Ballad</h3>
+		<hr>
+		<p>Description: description</p>
+		<h6>tags</h6>
+		<a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BEASTIE BOYS ---------- -->
+	<div class="game-box p-2" id="beastieBoys">
+		<h3>Beastie Boys</h3>
+		<hr>
+		<p>Description: description</p>
+		<h6>tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance/Warm Up</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BLUES ---------- -->
+	<div class="game-box p-2" id="blues">
+		<h3>Blues</h3>
+		<hr>
+		<p>Description: description</p>
+		<h6>tags</h6>
+		<a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - <a href="song_formats.html">Song Format</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BUBSY BERKELEY ---------- -->
+	<div class="game-box p-2" id="bubsyBerkeley">
+		<h3>Bubsy Berkeley</h3>
+		<hr>
+		<p>Description: Named after the famous MGM musicals choreographer</p>
+<p>Form a symmetrical shape on stage and put on some high impact music</p>
+<p>Take a suggestion for a title or piece</p>
+		<h6>tags</h6>
+		<a href="energy.html">Energy</a> - <a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+</div>
+<p class="white">built</p></body>
+<footer>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
+</footer>
 </html>
